<resources>
    <string name="fts">Fine Tuning Sharp</string>
    <string name="sharp_fine_tuning">Sharpe Fine Tuning</string>
    <string name="expsettings">Exposure Settings</string>
    <string name="abc_action_bar_home_description">SABRE Settings</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">Processing Settings</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">Noise Smoothing Settings</string>
    <string name="abc_activitychooserview_choose_application">Color Settings</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Light and Shadow Settings</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Exposition</string>
    <string name="abc_shareactionprovider_share_with_application">Settings for SABRE</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about_mars_desc">Save photos and videos to a private storage space in Google Photos on your device</string>
    <string name="about_mars_desc_2">Easily move photos and videos to Locked Folder or back to your gallery</string>
    <string name="about_mars_title">Keep photos and videos private</string>
    <string name="accessibility_autotimer_start">Start auto-timer</string>
    <string name="accessibility_autotimer_stop">Stop auto-timer</string>
    <string name="noise_smoothing_settings">Noise smoothing settings and Other noise reduction</string>
    <string name="accessibility_back_to_video_description">Back to normal video mode</string>
    <string name="accessibility_cancel_button">Cancel</string>
    <string name="accessibility_capture_imax_start">Start panorama</string>
    <string name="accessibility_capture_imax_stop">Stop panorama</string>
    <string name="light_and_shadow_settings">Light and Shadow Settings</string>
    <string name="accessibility_capture_video_start">Start video</string>
    <string name="accessibility_capture_video_stop">Stop video</string>
    <string name="accessibility_cheetah_video_start">Start time lapse</string>
    <string name="accessibility_cheetah_video_stop">Stop time lapse</string>
    <string name="accessibility_close_button">Close</string>
    <string name="accessibility_close_social_share">Close social share</string>
    <string name="accessibility_done_button">Done</string>
    <string name="accessibility_elapsed_recording_time_description">Recording time %1$s</string>
    <string name="accessibility_elapsed_time_during_video_recording">Time spent recording</string>
    <string name="accessibility_filmstrip_toggle">Photo gallery</string>
    <string name="accessibility_hfr_record_speed_desc">Slow Motion %1$d/%2$dx speed</string>
    <string name="accessibility_hfr_video_start">Start slow motion</string>
    <string name="accessibility_hfr_video_stop">Stop slow motion</string>
    <string name="accessibility_imax_backtracking">Move in original direction</string>
    <string name="accessibility_imax_too_fast">Slow down</string>
    <string name="accessibility_imax_too_much_roll">Hold phone straight</string>
    <string name="accessibility_longshot_capture">Take quick video</string>
    <string name="accessibility_night_stop_button">Stop</string>
    <string name="accessibility_open_social_share">Open social share</string>
    <string name="accessibility_output_time_during_video_recording">Length of time lapse video</string>
    <string name="accessibility_processing_the_photo">Processing the photo</string>
    <string name="color_transform">Color transform</string>
    <string name="accessibility_shutter_button">Shutter</string>
    <string name="accessibility_speech_enhance_indicator">Speech enhancement on</string>
    <string name="accessibility_speed">Speed is %s</string>
    <string name="accessibility_switch_photo_mode">Light and Shadow settings</string>
    <string name="accessibility_switch_video_mode">Setting up lenses</string>
    <string name="accessibility_take_catshark_photo_button">Take Night Sight in Camera</string>
    <string name="accessibility_take_catshark_portrait_button">Take Night Sight in Portrait</string>
    <string name="accessibility_take_lasagna_button">Take Motion mode photo</string>
    <string name="accessibility_take_nightsight_button">Adjust the image quality of all lenses</string>
    <string name="accessibility_take_photo_button">Take photo</string>
    <string name="accessibility_take_photosphere_button">Take photosphere</string>
    <string name="accessibility_take_portrait_button">Take portrait</string>
    <string name="accessibility_timelapse_record_speed_desc">Time Lapse %dx speed</string>
    <string name="libpatcher_settings">Lens Settings</string>
    <string name="sharpness">Sharpness</string>
    <string name="chroma">Chroma(spatial)</string>
    <string name="accessibility_unlock_to_camera">Spatial</string>
    <string name="accessibility_video_mode_desc">Normal Video Mode</string>
    <string name="accessibility_video_output_length_description">Output video length %1$s</string>
    <string name="denoise">Denoise</string>
    <string name="chromadenoise">Chroma Denoise</string>
    <string name="luma">Luma</string>
    <string name="lumadenoise">Luma Denoise</string>
    <string name="lumanoise">Luma Noise</string>
    <string name="saturation">Saturation</string>
    <string name="iso">Iso</string>
    <string name="udv">User Definied Values</string>
    <string name="uv">User Values</string>
    <string name="warning">WARNING!</string>
    <string name="dw">Be careful when setting these values!\\nIncorrect values can crash the camera!</string>
    <string name="clibpatcher">Configuring Libpatcher</string>
    <string name="maincamera">Main Camera</string>
    <string name="entrylib">Entry Lib</string>
    <string name="entrylibs">(%s) Lib</string>
    <string name="mainsettings">Main Settings</string>
    <string name="enableglobal">Enable Global</string>
    <string name="enabled">Enabled</string>
    <string name="disabled">Disabled</string>
    <string name="mainsetting">Main Setting</string>
    <string name="libpatchersettings">Lens Settings</string>
    <string name="advice_dirty_lens">Your lens may need cleaning</string>
    <string name="advice_dirty_lens_popup_text">Lens smudges aren\'t always easy to see, and they can come from fingerprints, oil or dirt.\n\nClean your lens for better photo quality.</string>
    <string name="onlibpatchermain">Enable Libpatcher main</string>
    <string name="advice_scene_distance_message">Move back to improve focus</string>
    <string name="ae_af_lock_label">Exposure and focus lock</string>
    <string name="af_ae_lock">AF / AE Lock</string>
    <string name="af_desc">Focus options</string>
    <string name="af_off_far_acc_desc">Lock focus to far</string>
    <string name="af_off_far_desc">Far</string>
    <string name="af_off_infinity_acc_desc">Lock focus to infinity</string>
    <string name="af_off_infinity_desc">Infinity</string>
    <string name="af_off_near_acc_desc">Lock focus to near</string>
    <string name="af_off_near_desc">Near</string>
    <string name="af_on_acc_desc">Turn on autofocus</string>
    <string name="onlibpatcher">Library Patcher is Enabled</string>
    <string name="af_on_option_desc">Auto</string>
    <string name="offlibpatcher">Library Patcher is Disabled</string>
    <string name="af_option_desc">Focus</string>
    <string name="pref_lib_default_title">1.000 (Default)</string>
    <string name="noise_model_tune_category">Custom noise model tune-up</string>
    <string name="noisemodelblock">Noise Model Blocker</string>
    <string name="noise_main">Main camera</string>
    <string name="app_name">Camera</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="aspect_ratio_desc">Ratio</string>
    <string name="astro_auto_acc_desc">Astrophotography Auto</string>
    <string name="astro_auto_desc">Auto</string>
    <string name="astro_desc">Astrophotography</string>
    <string name="astro_edu_image_content_description">Example photo of Astrophotography</string>
    <string name="astro_line_1">Place phone on a steady surface like a tripod or rock.</string>
    <string name="astro_line_2">The shutter will change from a moon to stars. Tap it.</string>
    <string name="astro_off_acc_desc">Astrophotography Off</string>
    <string name="astro_off_desc">Off</string>
    <string name="astro_option_desc">Astrophotography options</string>
    <string name="astro_photo_url">https://www.gstatic.com/aiux/gca/astro/astro_edu.jpg</string>
    <string name="modsetting2">Global FIX</string>
    <string name="astrophotography_edu_title">Astrophotography</string>
    <string name="astrophotography_suggestion_text">Try Astrophotography</string>
    <string name="faceretouch_off_option_desc">Off</string>
    <string name="faceretouch_on_light_option_desc">Subtle</string>
    <string name="faceretouch_on_strong_option_desc">Smooth</string>
    <string name="go_to_photos_btn_text">Go to Google Photos</string>
    <string name="mars_learn_more">Learn more</string>
    <string name="motion_photos_additional_info">Top Shot is unavailable when one of these features is on: Flash, Social Media Depth features, Night Sight, Selfie Illumination.</string>
    <string name="motion_photos_bottomsheet_learn_more">Learn more</string>
    <string name="motion_photos_bottomsheet_text">When Top Shot is on, Pixel includes a short video to capture more of the moment. Pixel will also suggest moments, or frames, that are worth saving.</string>
    <string name="motion_photos_video_caption">You can also select a favorite individual shot.</string>
    <string name="retouching_edu_apply">Apply</string>
    <string name="retouching_edu_desc">Face retouching adjusts skin texture, under-eye tone, and eye brightness.</string>
    <string name="retouching_edu_disc">Captured on Pixel 5</string>
    <string name="selfie_angle_bottom_sheet_description">When you take a selfie, try holding the camera slightly above your eyes.</string>
    <string name="selfie_angle_bottom_sheet_setting_button">Turn off hints in Settings</string>
    <string name="selfie_angle_bottom_sheet_turn_off_button">Dismiss</string>
    <string name="setup_mars_description">Save your photos and videos to a private storage space in Google Photos on your device. Open Locked Folder using your current device screen lock option.</string>
    <string name="setup_mars_title">Set up Locked Folder</string>
    <string name="translate_tooltip_body">Translate text instantly or get info about things you see</string>
    <string name="translate_tooltip_title">Live Translate and more</string>
    <string name="translate_tooltip_try_it">Try it</string>
</resources>