<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout android:layout_gravity="center" android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="match_parent">
        <ImageView android:layout_gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="24dp" android:src="@drawable/locked_folder_dark"/>
        <TextView android:textSize="22sp" android:layout_gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/setup_mars_title"/>
        <TextView android:textSize="14sp" android:layout_gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="19dp" android:text="@string/setup_mars_description"/>
        <com.google.android.material.button.MaterialButton android:textColor="@color/google_blue300" android:id="@+id/photos_button" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/go_to_photos_btn_text" android:fontFamily="@font/google_sans_medium_compat" android:layout_marginHorizontal="24dp" android:layout_marginVertical="18dp" android:paddingVertical="8dp" android:lineHeight="20sp" app:backgroundTint="@color/google_grey800" app:backgroundTintMode="src_atop" app:cornerRadius="4dp" app:rippleColor="#33ffffff" style="@style/Widget.GoogleMaterial.Button"/>
    </LinearLayout>
</merge>
