<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="match_parent" android:layout_marginTop="16dp">
        <TextView android:textAppearance="?attr/textAppearanceBody2" android:textColor="?attr/colorOnSurface" android:gravity="center_horizontal" android:layout_gravity="center_horizontal" android:padding="0px" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/motion_photos_bottomsheet_text" android:layout_marginHorizontal="25dp"/>
        <androidx.cardview.widget.CardView android:layout_gravity="center_horizontal" android:id="@+id/bottom_sheet_video_container" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="24dp" android:layout_marginHorizontal="24dp" app:cardCornerRadius="28dp" app:cardElevation="0dp">
            <com.google.android.apps.camera.ui.eduimageview.EduImageView android:id="@+id/bottom_sheet_video" android:layout_width="340dp" android:layout_height="270dp"/>
        </androidx.cardview.widget.CardView>
        <TextView android:textAppearance="?attr/textAppearanceCaption" android:textColor="?attr/colorOnSurfaceVariant" android:gravity="center_horizontal" android:layout_gravity="center" android:id="@+id/bottom_sheet_image_caption" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="16dp" android:text="@string/motion_photos_video_caption" android:textAlignment="center" android:layout_marginHorizontal="24dp"/>
        <TextView android:textAppearance="?attr/textAppearanceCaption" android:textColor="?attr/colorOnSurface" android:gravity="center_horizontal" android:layout_gravity="center_horizontal" android:padding="0px" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="24dp" android:text="@string/motion_photos_additional_info" android:layout_marginHorizontal="24dp"/>
        <com.google.android.material.button.MaterialButton android:layout_gravity="center_horizontal" android:id="@+id/learn_more_button" android:text="@string/motion_photos_bottomsheet_learn_more" android:layout_marginHorizontal="24dp" android:layout_marginVertical="24dp" style="@style/MaterialButtonOutlinedStyle.AllRoundedCorner12dp"/>
    </LinearLayout>
</merge>
