<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="match_parent">
        <TextView android:textAppearance="?attr/textAppearanceBody2" android:textSize="14sp" android:textColor="@color/google_white" android:padding="0px" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/motion_photos_bottomsheet_text" android:fontFamily="sans-serif" android:layout_marginHorizontal="24dp" android:lineHeight="20sp"/>
        <androidx.cardview.widget.CardView android:layout_gravity="center_horizontal" android:id="@+id/bottom_sheet_video_container" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="18dp" android:layout_marginHorizontal="24dp" app:cardCornerRadius="4dp" app:cardElevation="0dp">
            <com.google.android.apps.camera.ui.eduimageview.EduImageView android:id="@+id/bottom_sheet_video" android:layout_width="340dp" android:layout_height="270dp"/>
        </androidx.cardview.widget.CardView>
        <TextView android:textAppearance="?attr/textAppearanceCaption" android:textColor="@color/google_white" android:layout_gravity="center" android:id="@+id/bottom_sheet_image_caption" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="12dp" android:text="@string/motion_photos_video_caption" android:textAlignment="center" android:layout_marginHorizontal="24dp" android:lineHeight="16sp"/>
        <TextView android:textAppearance="?attr/textAppearanceBody2" android:textSize="14sp" android:textColor="@color/google_white" android:padding="0px" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="18dp" android:text="@string/motion_photos_additional_info" android:fontFamily="sans-serif" android:layout_marginHorizontal="24dp" android:lineHeight="20sp"/>
        <com.google.android.material.button.MaterialButton android:textColor="@color/google_blue300" android:id="@+id/learn_more_button" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/motion_photos_bottomsheet_learn_more" android:fontFamily="@font/google_sans_medium_compat" android:layout_marginHorizontal="24dp" android:layout_marginVertical="18dp" android:paddingVertical="8dp" android:lineHeight="20sp" app:backgroundTint="@color/google_grey800" app:backgroundTintMode="src_atop" app:cornerRadius="4dp" app:rippleColor="#33ffffff" style="@style/Widget.GoogleMaterial.Button"/>
    </LinearLayout>
</merge>
