<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" android:gravity="center" android:layout_gravity="center" android:orientation="horizontal" android:id="@+id/level_selector" android:background="@drawable/retouching_edu_optionbar_legacy" android:padding="2dp" android:layout_width="wrap_content" android:layout_height="wrap_content">
    <LinearLayout android:gravity="center" android:layout_gravity="center" android:orientation="horizontal" android:id="@+id/retouching_edu_off" android:background="@drawable/retouching_edu_option_unselected_legacy" android:layout_width="wrap_content" android:layout_height="32dp">
        <ImageView android:padding="0dp" android:layout_width="18dp" android:layout_height="18dp" android:src="@drawable/ic_faceretouch_off" android:layout_marginStart="8dp"/>
        <TextView android:textSize="14sp" android:textColor="@color/google_white" android:layout_width="wrap_content" android:layout_height="18dp" android:text="@string/faceretouch_off_option_desc" android:fontFamily="@font/google_sans_medium_compat" android:layout_marginStart="4dp" android:layout_marginEnd="12dp" android:lineHeight="20sp"/>
    </LinearLayout>
    <LinearLayout android:gravity="center" android:layout_gravity="center" android:orientation="horizontal" android:id="@+id/retouching_edu_light" android:background="@drawable/retouching_edu_option_selected_legacy" android:layout_width="wrap_content" android:layout_height="32dp">
        <ImageView android:padding="0dp" android:layout_width="18dp" android:layout_height="18dp" android:src="@drawable/ic_faceretouch_on_light" android:layout_marginStart="8dp"/>
        <TextView android:textSize="14sp" android:textColor="@color/google_white" android:layout_width="wrap_content" android:layout_height="18dp" android:text="@string/faceretouch_on_light_option_desc" android:fontFamily="@font/google_sans_medium_compat" android:layout_marginStart="4dp" android:layout_marginEnd="12dp" android:lineHeight="20sp"/>
    </LinearLayout>
    <LinearLayout android:gravity="center" android:layout_gravity="center" android:orientation="horizontal" android:id="@+id/retouching_edu_strong" android:background="@drawable/retouching_edu_option_unselected_legacy" android:layout_width="wrap_content" android:layout_height="32dp">
        <ImageView android:padding="0dp" android:layout_width="18dp" android:layout_height="18dp" android:src="@drawable/ic_faceretouch_on_strong" android:layout_marginStart="8dp"/>
        <TextView android:textSize="14sp" android:textColor="@color/google_white" android:layout_width="wrap_content" android:layout_height="18dp" android:text="@string/faceretouch_on_strong_option_desc" android:fontFamily="@font/google_sans_medium_compat" android:layout_marginStart="4dp" android:layout_marginEnd="12dp" android:lineHeight="20sp"/>
    </LinearLayout>
</LinearLayout>
